--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,55 +1,50 @@
-# Sample localization file for English. Add more files in this directory for other locales.
-# See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
 en:
+  Chinese:       "Chinese"
+  English:       "English"
   will_paginate:
     page_gap:        "..."
 
   layouts:
     application:
-      title:         "网上书店"
-      order:         "订单"
-      product:       "商品"
-      user:          "用户"
-      exit:          "退出"
-      register:      "注册"
-      index:         "首页"
+      title:         "BookStore"
+      order:         "Orders"
+      product:       "Products"
+      user:          "Users"
+      exit:          "Exit"
+      register:      "Register"
+      index:         "Index"
   admin:
     index:
-      back_to_index: "返回首页"
+      back_to_index: "BackToIndex"
   carts:
     cart:
-      cart:          "购物车"
-      total_price:   "总价"
-      checkout:      "支付"
-      delete:        "清空"
+      cart:          "Carts"
+      total_price:   "TotalPrice"
+      checkout:      "Pay"
+      delete:        "Empty"
   orders:
     form:
-      name:          "姓名"
-      address:       "地址"
-      email:         "邮箱"
-      pay_type:      "支付方式"
-      submit:        "提交"
-      choose:        "请选择"
+      name:          "Name"
+      address:       "Address"
+      email:         "Email"
+      pay_type:      "PayType"
+      submit:        "Submit"
+      choose:        "Please choose a pay_type"
     edit:
-      Show:          "详细"
-      Back:          "返回"
-      edit:          "编辑订单"
+      Show:          "Show"
+      Back:          "Back"
+      edit:          "Edit"
     index:
-      list_orders:   "订单列表"
-      name:          "姓名"
-      address:       "地址"
-      email:         "邮箱"
-      pay_type:      "支付方式"
-      show:          "详细"
-      edit:          "编辑"
-      destroy:       "删除"
-      new:           "新建"
-      previous:      "上一页"
-      next:          "下一页"
+      list_orders:   "List Orders"
+      name:          "Name"
+      address:       "Address"
+      email:         "Email"
+      pay_type:      "PayType"
+      show:          "Show"
+      edit:          "Edit"
+      destroy:       "Destroy"
+      new:           "New"
+      previous:      "previous"
+      next:          "next"
     new:
-      msg:           "请输入您的信息"
-
-
-
-
+      msg:           "Please Enter Your Details"
